--- a/8中css布局技巧/多格布局/index.less
+++ b/8中css布局技巧/多格布局/index.less
@@ -66,7 +66,7 @@
 .item:first-child:nth-last-child(4) ~ .item:nth-child(2),
 .item:first-child:nth-last-child(4) ~ .item:nth-child(3),
 .item:first-child:nth-last-child(4) ~ .item:nth-child(4) {
-    #square(3);;
+    #square(3);
 }
 .item:first-child:nth-last-child(4) {
     border-top-left-radius: 10px;
