--- a/分页/index.css
+++ b/分页/index.css
@@ -1,10 +1,10 @@
 ul.pagination {
-  display: inline-block;
+  float: right;
   padding: 0;
   margin: 0;
 }
 ul.pagination li {
-  display: inline;
+  display: inline-block;
 }
 ul.pagination li a {
   float: left;
