--- a/分页/index.less
+++ b/分页/index.less
@@ -1,9 +1,11 @@
 ul.pagination {
-    display: inline-block;
+    float: right;
+    // display: inline-block;
     padding: 0;
     margin: 0;
     li{
-        display: inline;
+        // display: inline;
+        display: inline-block;
         a{
             float: left;
             padding: 8px 16px;
