--- a/分页/index.less
+++ b/分页/index.less
@@ -3,6 +3,10 @@ ul.pagination {
     // display: inline-block;
     padding: 0;
     margin: 0;
+    
+    //display:inline-block元素之间空隙的产生原因和解决办法
+    display: table;
+    word-spacing: -1em;
     li{
         // display: inline;
         display: inline-block;
