--- a/css基础/更多的选择器/index.less
+++ b/css基础/更多的选择器/index.less
@@ -1,7 +1,7 @@
 //选择a元素，并且li元素必须是第一个子元素
-li:first-child{
-    color: crimson;
-}
+// li:first-child{
+//     color: crimson;
+// }
 // 选中的是子元素中第一个li元素
 li:first-of-type{
     color: crimson;
@@ -12,9 +12,9 @@ li:last-child{
 }
 
 // 选中的是子元素中最后一个li元素
-li:last-of-type{
-    color: darkcyan;
-}
+// li:last-of-type{
+//     color: darkcyan;
+// }
 
 // 必须是a元素，必须是第五个子元素
 nav{
